Homework3/modules/aws-security/security.tf
resource "aws_security_group" "allow_ssh"{
   name = var.cluster_name_sg
    description = "Open ports for nginx demo"
    vpc_id = var.vpc_id

    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["0.0.0.0/0"]
    }
}

output "aws_ssh_id" {
    value = [aws_security_group.allow_ssh.id]
}
